--- a/recursos/css/estilos.css
+++ b/recursos/css/estilos.css
@@ -1,35 +1,32 @@
-@media screen and (max-width: 1920px) and (min-width: 100px) {
+@media screen and (max-width: 1920px) and (min-width: 200px) {
     
     /*Para centrar todo el contenido del body*/
     body {
-        margin: 0 0 1rem;
-        display: flex;
-        justify-content: center;
+        width: 80%;
+        margin: 0 auto;
     }
 
     /*Fondo de la cabecera del menú*/
     header {
-        background: rgba(0,0,0,0.7);
-        width: 80%;
-        position: fixed;
-        z-index: 100;
-    }
-      
-    nav {
-        float: left;
-    }
-      
+        background: rgba(70, 65, 65, 0.7);
+        text-align: center;
+        color:brown;
+    }    
+    
+    /*Quito el puntuado de los li */
     nav ul {
         list-style: none;
         overflow: hidden; 
     }
-      
+
+    /*Pongo los elementos de li en horizontal*/
     nav ul li {
         float: left;
         font-family: Arial, sans-serif;
         font-size: 14px;
     }
 
+    /*Le pongo estilo a los li, para que haya espacio entre ellos, color, quitar subrayado*/
     nav ul li a {
         display: block;
         padding: 10px;
@@ -42,12 +39,9 @@
         background: #08b4e9;
     }
 
-    /*Para que el div no se ponga encima del header*/
-    .principal {
-        margin-top: 70px;
-        width: 80%;
-        position: fixed;
-        background: #c0469b;
+    footer {
+        color:brown;
+        background: rgba(70, 65, 65, 0.7);
     }
-
+ 
 }
